[package]
name = "or-tools"
version = "0.1.0"
authors = ["Alexander Lindermayr <linderal@uni-bremen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lp-modeler = { git = "https://github.com/jcavat/rust-lp-modeler" }
ordered-float = "1.0.2"

